[NW] splitting into many files

--- a/src/todo
+++ b/src/todo
@@ -1,2 +1,6 @@
 Scene.is_ready()
-render_to_buffer coppied to work with normal map :(
+marble texture
+split collections into many files
+update showcase
+.obj file textures and normals usage
+
