--- a/src/todo
+++ b/src/todo
@@ -1,6 +1,5 @@
 Scene.is_ready()
 marble texture
-split collections into many files
 update showcase
 .obj file textures and normals usage
-
+f for screenshot
