--- a/src/todo
+++ b/src/todo
@@ -7,6 +7,7 @@ plane hittable
 fix denoiser
 fix all the memory leaks
 interface overhaul
+? refactor bvh
 
 === NOT soon ===
 .obj file textures and normals usage
